# Async-parser

./: .env.example  db.sqlite3  pyproject.toml
ads/: admin.py  models.py  serializers.py  services.py  views.py
ads/migrations/: 0001_initial.py  0002_apartment.py
core/: script.py  settings.py  urls.py
